# agentecdg

./: README.md  package-lock.json  pyproject.toml  requirements.txt
Shared_utils/: .gitignore  README.md
Shared_utils/formulas/: azureopenai_client.py
Utils/formulas/: README.md  path_utils.py
assets/: INSTRUCCIONES_PROYECTO – Agente CDG.txt
backend/: README.md  clear_cache.py  config.py  debug_import.py  main.py  main_simple.py
backend/reports/: comparacion_precios_20250901_20250725_214209.csv
backend/scripts/: alinear_gestores.py  calcula_precios_reales_final.py  calcular_precios_octubre.py  check_gestor_18  comparar_precios_std_real.py  correccion_contratos.py  correccion_gastos_octubre.py  corregir_centros_octubre.py  corregir_gastos_operativos.py  corregir_movimientos_octubre.py  genera_movimientos_contratos.py  genera_movimientos_octubre.py  inspeccionar_bd.py  mejora_gastos_octubre.py  reasignar_gastos_centrales_octubre.py  rollback_gestores.py  test_chart_endpoints_v4.4.py  test_curl_commands.sh  test_results_20250930_171521.json  verificar_contratos.py
backend/src/: .env.copy  __init__.py  defined_tools.py  planning_pattern.ipynb
backend/tests/: test_basic_app.py  test_cdg_agent.py  test_chart_specific.py  test_comparative_queries.py  test_debug_import.py  test_deviation_queries.py  test_dynamic_config.py  test_gestor_queries.py  test_import.py  test_incentive_queries.py  test_integration.py  test_main.py  (+3 more)
docs/: INSTRUCCIONES_PROYECTO – Agente CDG.md  cdg_agent_backup.py
frontend/: .eslintrc.js  README.md  package-lock.json  package.json
(+138 files in other folders)
