[project]
name = "template-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Vendrell, David",email = "david.vendrell.lopez@accenture.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.82.0,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
